--- a/public/logon.html
+++ b/public/logon.html
@@ -49,6 +49,7 @@
         </div>
     </div>
     <script src="js/logon.js"></script>
+    <script src="js/datamodel.js"></script>
 </body>
 
 </html>
