--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FitTracker - Your Fitness Journey</title>
     <style>
         :root {
-            /* Color scheme from provided data */
+            /* Color scheme from provided data aaaaa*/
             --primary: #2563eb;
             --secondary: #10b981;
             --accent: #f59e0b;
