--- a/public/logon.html
+++ b/public/logon.html
@@ -37,6 +37,10 @@
             <!-- Create Account Form -->
             <form id="create-account-form" class="auth-form">
                 <div class="form-group">
+                    <label for="create-name">Full Name</label>
+                    <input type="text" id="create-name" required minlength="2">
+                </div>
+                <div class="form-group">
                     <label for="create-email">Email</label>
                     <input type="email" id="create-email" required>
                 </div>
@@ -49,7 +53,5 @@
         </div>
     </div>
     <script src="js/logon.js"></script>
-    <script src="js/datamodel.js"></script>
 </body>
-
 </html>
